# clevis

src/luks/: clevis-luks-common-functions.in
src/luks/dracut/clevis-pin-pkcs11/: clevis-pkcs11-hook.sh  module-setup.sh.in
src/luks/systemd/: clevis-luks-askpass.in
src/luks/systemd/dracut/clevis/: module-setup.sh.in
src/pins/pkcs11/: meson.build
src/pins/pkcs11/tests/: 01.pub  meson.build  pin-pkcs11  pkcs11-common-tests.sh
